k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springfullapp-dep
  labels:
    app: springfullapp-dep
spec:
  selector:
    matchLabels:
      app: springfullapp-pod
  revisionHistoryLimit: 5
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: springfullapp-pod
    spec:
      containers:
        - name: springfullapp-container
          image: dhronan/spring-full-app
          imagePullPolicy: Always
          ports:
           - containerPort: 9292
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-dep
  labels:
    app: redis-dep
spec:
  selector:
    matchLabels:
      app: redis-pod
  revisionHistoryLimit: 5
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: redis-pod
    spec:
      containers:
        - name: redis
          image: redis
          imagePullPolicy: Always
          ports:
           - containerPort: 6379
           
---
                
kind: Service
apiVersion: v1
metadata:
  name:  springfullapp-svc
spec:
  selector:
    app:  springfullapp-pod
  ports:
  - port:  80
    targetPort:  9292
    

---
                
kind: Service
apiVersion: v1
metadata:
  name:  redis-svc
spec:
  selector:
    app:  springfullapp-pod
  ports:
  - port:  6379
    targetPort:  6379
    
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springfullapp-ingress
  annotations:
    dev.okteto.com/generate-host: "true"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springfullapp-svc
                port: 
                    number: 80
